--- a/index.html
+++ b/index.html
@@ -121,7 +121,7 @@
         <h2>¿Quieres <span>ahorrar tiempo</span><br> en tu negocio?</h2>
         <div>
             <a href="https://libredte.cl" class="btn-get-started scrollto">¿Busca LibreDTE?</a>
-            <a href="/publicas/contacto" class="btn-projects scrollto">¡Contáctenos!</a>
+            <a href="/publicas/contacto.html" class="btn-projects scrollto">¡Contáctenos!</a>
         </div>
     </div>
     <div id="intro-carousel" class="owl-carousel">
@@ -170,9 +170,9 @@
                             <a href="https://tienda.sasco.cl/carro"><i class="fas fa-shopping-cart fa-fw"></i> Ver carro de compras</a>
                             <a href="https://tienda.sasco.cl/pagos"><i class="fas fa-dollar-sign fa-fw"></i> Pagar cuenta online</a>
                             <a href="https://sasco.cl/boletas"><i class="fas fa-file-alt fa-fw"></i> Verificar boleta electrónica</a>
-                            <a href="/publicas/despachos"><i class="fas fa-truck fa-fw"></i> Información sobre despachos</a>
-                            <a href="/publicas/privacidad"><i class="fas fa-user-secret fa-fw"></i> Política de privacidad</a>
-                            <a href="/publicas/terminos"><i class="fas fa-gavel fa-fw"></i> Términos y condiciones</a>
+                            <a href="/publicas/despachos.html"><i class="fas fa-truck fa-fw"></i> Información sobre despachos</a>
+                            <a href="/publicas/privacidad.html"><i class="fas fa-user-secret fa-fw"></i> Política de privacidad</a>
+                            <a href="/publicas/terminos.html"><i class="fas fa-gavel fa-fw"></i> Términos y condiciones</a>
                         </div>
                     </div>
                     <div class="col-md-4 footer-links">
@@ -182,7 +182,7 @@
                             <a href="https://sascocl.slack.com"><i class="fab fa-slack fa-fw"></i> Trabajo en equipo en Slack</a>
                             <a href="https://mail.sasco.cl"><i class="far fa-envelope fa-fw"></i> Correo en Gmail</a>
                             <a href="https://libredte.cl/dte/contribuyentes/seleccionar/76192083"><i class="far fa-file-alt fa-fw"></i> SASCO SpA en LibreDTE</a>
-                            <a href="/publicas/trabajaConNosotros"><i class="fas fa-people-carry fa-fw"></i> Trabaja con nosotros</a>
+                            <a href="/publicas/trabajaConNosotros.html"><i class="fas fa-people-carry fa-fw"></i> Trabaja con nosotros</a>
                         </div>
                     </div>
                     <div class="col-md-4 footer-links">
