Solucion Trabaja con Nosotros
Error Trabaja con Nosotros solucionado

--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -255,9 +255,9 @@
                             <a href="https://tienda.sasco.cl/carro"><i class="fas fa-shopping-cart fa-fw"></i> Ver carro de compras</a>
                             <a href="https://tienda.sasco.cl/pagos"><i class="fas fa-dollar-sign fa-fw"></i> Pagar cuenta online</a>
                             <a href="https://sasco.cl/boletas"><i class="fas fa-file-alt fa-fw"></i> Verificar boleta electrónica</a>
-                            <a href="/despachos"><i class="fas fa-truck fa-fw"></i> Información sobre despachos</a>
-                            <a href="/privacidad"><i class="fas fa-user-secret fa-fw"></i> Política de privacidad</a>
-                            <a href="/terminos"><i class="fas fa-gavel fa-fw"></i> Términos y condiciones</a>
+                            <a href="/publicas/despachos"><i class="fas fa-truck fa-fw"></i> Información sobre despachos</a>
+                            <a href="/publicas/privacidad"><i class="fas fa-user-secret fa-fw"></i> Política de privacidad</a>
+                            <a href="/publicas/terminos"><i class="fas fa-gavel fa-fw"></i> Términos y condiciones</a>
                         </div>
                     </div>
                     <div class="col-md-4 footer-links">
