--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -5,7 +5,7 @@
         <meta charset="utf-8" />
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />
-        <title>SASCO SpA</title>
+        <title>SASCO SpA - Trabaja Con Nosotros :)</title>
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="facturación, contabilidad, inventario, rrhh, blockchain, criptomonedas, criptopagos" name="keywords">
         <meta content="Servicios, asesorías y soluciones computacionales desde Santa Cruz para Chile" name="description">
