Correción de errores
cambios realizados para el correcto funcionamiento de la pagina

--- a/nosotros.html
+++ b/nosotros.html
@@ -9,21 +9,21 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="facturación, contabilidad, inventario, rrhh, blockchain, criptomonedas, criptopagos" name="keywords">
         <meta content="Servicios, asesorías y soluciones computacionales desde Santa Cruz para Chile" name="description">
-        <link rel="shortcut icon" type="image/x-icon" href="/static/layouts/reveal/img/favicon.png" />
-        <link href="/static/layouts/reveal/img/apple-touch-icon-57x57.png" rel="apple-touch-icon">
+        <link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.png" />
+        <link href="/static/img/apple-touch-icon-57x57.png" rel="apple-touch-icon">
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i" rel="stylesheet">
         <!-- Bootstrap CSS File -->
-        <link href="/static/layouts/reveal/js/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/layouts/reveal/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Libraries CSS Files -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-        <link href="/static/layouts/reveal/css/animate/animate.min.css" rel="stylesheet">
-        <link href="/static/layouts/reveal/css/ionicons/css/ionicons.min.css" rel="stylesheet">
-        <link href="/static/layouts/reveal/css/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-        <link href="/static/layouts/reveal/css/magnific-popup/magnific-popup.css" rel="stylesheet">
+        <link href="/static/css/animate/animate.min.css" rel="stylesheet">
+        <link href="/static/css/ionicons/css/ionicons.min.css" rel="stylesheet">
+        <link href="/static/css/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+        <link href="/static/css/magnific-popup/magnific-popup.css" rel="stylesheet">
         <!-- Main Stylesheet File -->
-        <link href="/static/layouts/reveal/css/reveal/css/style.css" rel="stylesheet">
-        <link href="/static/layouts/reveal/css/style.css" rel="stylesheet">
+        <link href="/static/css/reveal/css/style.css" rel="stylesheet">
+        <link href="/static/css/style.css" rel="stylesheet">
         <!-- Jquery (para poder ser usado en páginas)-->
         <script src="/static/layouts/reveal/jquery/jquery.min.js"></script>
     </head>
@@ -59,7 +59,7 @@
                 <div>
                     <div id="logo" class="pull-left" style="display:inline">
                         <a  href="/">
-                            <img src="/static/layouts/reveal/img/logo.png" alt="Logo SASCO Spa" style="max-height:50px"/>
+                            <img src="/static/img/logo.png" alt="Logo SASCO Spa" style="max-height:50px"/>
                         </a>
                     </div>
                     <nav id="nav-menu-container" class="d-print-none">
@@ -135,7 +135,7 @@
         <div class="row">
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/bender.jpg" alt="Bender" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/bender.jpg" alt="Bender" /></div>
                     <div class="details">
                         <h4>Bender</h4>
                         <span>Asistente Virtual</span>
@@ -147,7 +147,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/consuelo-antonia.png" alt="Consuelo Antonia" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/consuelo-antonia.png" alt="Consuelo Antonia" /></div>
                     <div class="details">
                         <h4>Consuelo Antonia</h4>
                         <span>Atención al Cliente</span>
@@ -159,7 +159,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/esteban.png" alt="Esteban Eduardo" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/esteban.png" alt="Esteban Eduardo" /></div>
                     <div class="details">
                         <h4>Esteban Eduardo</h4>
                         <span>Fundador y CEO</span>
@@ -172,7 +172,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/felipe.png" alt="Felipe Ignacio" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/felipe.png" alt="Felipe Ignacio" /></div>
                     <div class="details">
                         <h4>Felipe Ignacio</h4>
                         <span>Tecnología</span>
@@ -185,7 +185,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/catalina.jpg" alt="Isabel Catalina" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/catalina.jpg" alt="Isabel Catalina" /></div>
                     <div class="details">
                         <h4>Isabel Catalina</h4>
                         <span>Atención al Cliente</span>
@@ -197,7 +197,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/jose.png" alt="José Miguel" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/jose.png" alt="José Miguel" /></div>
                     <div class="details">
                         <h4>José Miguel</h4>
                         <span>Contabilidad</span>
@@ -209,7 +209,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/macarena.png" alt="Macarena Paz" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/macarena.png" alt="Macarena Paz" /></div>
                     <div class="details">
                         <h4>Macarena Paz</h4>
                         <span>Ventas</span>
@@ -221,7 +221,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/marcela.jpg" alt="Marcela Francisca" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/marcela.jpg" alt="Marcela Francisca" /></div>
                     <div class="details">
                         <h4>Marcela Francisca</h4>
                         <span>Marketing</span>
@@ -233,7 +233,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/consuelo.png" alt="Margarita Consuelo" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/consuelo.png" alt="Margarita Consuelo" /></div>
                     <div class="details">
                         <h4>Margarita Consuelo</h4>
                         <span>Ventas</span>
@@ -245,7 +245,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/maria-cristina.jpg" alt="María Cristina" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/maria-cristina.jpg" alt="María Cristina" /></div>
                     <div class="details">
                         <h4>María Cristina</h4>
                         <span>Administración</span>
@@ -257,7 +257,7 @@
             </div>
             <!--<div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="<?=$_base?>/layouts/reveal/img/pages/nosotros/team/maria-luisa.jpg" alt="María Luisa" /></div>
+                    <div class="pic"><img src="<?=$_base?>img/pages/nosotros/team/maria-luisa.jpg" alt="María Luisa" /></div>
                     <div class="details">
                         <h4>María Luisa</h4>
                         <span>Asesora Externa</span>
@@ -269,7 +269,7 @@
             </div>-->
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/nicolas.jpg" alt="Nicolás Benjamín" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/nicolas.jpg" alt="Nicolás Benjamín" /></div>
                     <div class="details">
                         <h4>Nicolás Benjamín</h4>
                         <span>Tecnología</span>
@@ -282,7 +282,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/pablo.png" alt="Pablo Enrique" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/pablo.png" alt="Pablo Enrique" /></div>
                     <div class="details">
                         <h4>Pablo Enrique</h4>
                         <span>Tecnología</span>
@@ -295,7 +295,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/sergio.png" alt="Sergio Andrés" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/sergio.png" alt="Sergio Andrés" /></div>
                     <div class="details">
                         <h4>Sergio Andrés</h4>
                         <span>Audiovisual</span>
@@ -307,7 +307,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/viviana.jpg" alt="Viviana Andrea" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/viviana.jpg" alt="Viviana Andrea" /></div>
                     <div class="details">
                         <h4>Viviana Andrea</h4>
                         <span>Infraestructura Física</span>
@@ -319,7 +319,7 @@
             </div>
             <div class="col-lg-3 col-md-6">
                 <div class="member">
-                    <div class="pic"><img src="/static/layouts/reveal/img/pages/nosotros/team/viviana-magdalena.jpg" alt="Viviana Magdalena" /></div>
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/viviana-magdalena.jpg" alt="Viviana Magdalena" /></div>
                     <div class="details">
                         <h4>Viviana Magdalena</h4>
                         <span>Atención al Cliente</span>
@@ -381,27 +381,27 @@
                 <div class="row">
                     <div class="col-md-3 mb-2 text-center">
                         <a href="https://libredte.cl" target="_blank">
-                            <img src="/static/layouts/reveal/img/footer/libredte.png" alt="LibreDTE" class="img-thumbnail img-fluid" />
+                            <img src="/static/img/footer/libredte.png" alt="LibreDTE" class="img-thumbnail img-fluid" />
                         </a>
                     </div>
                     <div class="col-md-3 mb-2 text-center">
                         <a href="https://bhexpress.cl" target="_blank">
-                            <img src="/static/layouts/reveal/img/footer/bhexpress.png" alt="BHExpress" class="img-thumbnail img-fluid" />
+                            <img src="/static/img/footer/bhexpress.png" alt="BHExpress" class="img-thumbnail img-fluid" />
                         </a>
                     </div>
                     <div class="col-md-3 mb-2 text-center">
                         <a href="https://billmysales.com" target="_blank">
-                            <img src="/static/layouts/reveal/img/footer/billmysales.png" alt="BillMySales" class="img-thumbnail img-fluid" />
+                            <img src="/static/img/footer/billmysales.png" alt="BillMySales" class="img-thumbnail img-fluid" />
                         </a>
                     </div>
                     <!--<div class="col-md-3 mb-2 text-center">
                         <a href="https://criptopagos.cl" target="_blank">
-                            <img src="<?=$_base?>/layouts/reveal/img/footer/criptopagos.png" alt="CriptoPagos" class="img-thumbnail img-fluid" />
+                            <img src="<?=$_base?>/img/footer/criptopagos.png" alt="CriptoPagos" class="img-thumbnail img-fluid" />
                         </a>
                     </div>-->
                     <div class="col-md-3 mb-2 text-center">
                         <a href="https://contafi.cl" target="_blank">
-                            <img src="/static/layouts/reveal/img/footer/contafi.png" alt="ContaFi" class="img-thumbnail img-fluid" />
+                            <img src="/static/img/footer/contafi.png" alt="ContaFi" class="img-thumbnail img-fluid" />
                         </a>
                     </div>
                 </div>
@@ -427,19 +427,19 @@
         </footer><!-- #footer -->
         <!--/ End Footer Area -->
         <!-- JavaScript Libraries -->
-        <script src="/static/layouts/reveal/js/lib/jquery/jquery-migrate.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/easing/easing.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/superfish/hoverIntent.js"></script>
-        <script src="/static/layouts/reveal/js/lib/superfish/superfish.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/wow/wow.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/magnific-popup/magnific-popup.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/sticky/sticky.js"></script>
+        <script src="/static/layouts/reveal/lib/jquery/jquery-migrate.min.js"></script>
+        <script src="/static/layouts/reveal/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="/static/layouts/reveal/lib/easing/easing.min.js"></script>
+        <script src="/static/layouts/reveal/lib/superfish/hoverIntent.js"></script>
+        <script src="/static/layouts/reveal/lib/superfish/superfish.min.js"></script>
+        <script src="/static/layouts/reveal/lib/wow/wow.min.js"></script>
+        <script src="/static/layouts/reveal/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/static/layouts/reveal/lib/magnific-popup/magnific-popup.min.js"></script>
+        <script src="/static/layouts/reveal/lib/sticky/sticky.js"></script>
         <!-- Template Main Javascript File -->
         <script type="text/javascript" src="https://cdn.sasco.cl/js/__.js"></script>
         <script type="text/javascript" src="https://cdn.sasco.cl/js/form.js"></script>
-        <script src="/static/layouts/reveal/js/main.js"></script>
+        <script src="/static/layouts/reveal/lib/main.js"></script>
         <!--Start of Tawk.to Script-->
         
         <script type="text/javascript">
