--- a/index.html
+++ b/index.html
@@ -9,21 +9,21 @@
         <meta content="width=device-width, initial-scale=1.0" name="viewport">
         <meta content="facturación, contabilidad, inventario, rrhh, blockchain, criptomonedas, criptopagos" name="keywords">
         <meta content="Servicios, asesorías y soluciones computacionales desde Santa Cruz para Chile" name="description">
-        <link rel="shortcut icon" type="image/x-icon" href="/static/layouts/reveal/img/favicon.png" />
-        <link href="/static/layouts/reveal/img/apple-touch-icon-57x57.png" rel="apple-touch-icon">
+        <link rel="shortcut icon" type="image/x-icon" href="/static/img/favicon.png" />
+        <link href="/static/img/apple-touch-icon-57x57.png" rel="apple-touch-icon">
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Open+Sans:300,300i,400,400i,700,700i" rel="stylesheet">
         <!-- Bootstrap CSS File -->
-        <link href="/static/layouts/reveal/js/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
+        <link href="/static/layouts/reveal/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet">
         <!-- Libraries CSS Files -->
         <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.4.1/css/all.css" integrity="sha384-5sAR7xN1Nv6T6+dT2mhtzEpVJvfS3NScPQTrOxhwjIuvcA67KV2R5Jz6kr4abQsz" crossorigin="anonymous">
-        <link href="/static/layouts/reveal/css/animate/animate.min.css" rel="stylesheet">
-        <link href="/static/layouts/reveal/css/ionicons/css/ionicons.min.css" rel="stylesheet">
-        <link href="/static/layouts/reveal/css/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
-        <link href="/static/layouts/reveal/css/magnific-popup/magnific-popup.css" rel="stylesheet">
+        <link href="/static/css/animate/animate.min.css" rel="stylesheet">
+        <link href="/static/css/ionicons/css/ionicons.min.css" rel="stylesheet">
+        <link href="/static/css/owlcarousel/assets/owl.carousel.min.css" rel="stylesheet">
+        <link href="/static/css/magnific-popup/magnific-popup.css" rel="stylesheet">
         <!-- Main Stylesheet File -->
-        <link href="/static/layouts/reveal/css/reveal/css/style.css" rel="stylesheet">
-        <link href="/static/layouts/reveal/css/style.css" rel="stylesheet">
+        <link href="/static/css/reveal/css/style.css" rel="stylesheet">
+        <link href="/static/css/style.css" rel="stylesheet">
         <!-- Jquery (para poder ser usado en páginas)-->
         <script src="/static/layouts/reveal/jquery/jquery.min.js"></script>
     </head>
@@ -59,7 +59,7 @@
                 <div>
                     <div id="logo" class="pull-left" style="display:inline">
                         <a  href="/">
-                            <img src="/static/layouts/reveal/img/logo.png" alt="Logo SASCO Spa" style="max-height:50px"/>
+                            <img src="/static/img/logo.png" alt="Logo SASCO Spa" style="max-height:50px"/>
                         </a>
                     </div>
                     <nav id="nav-menu-container" class="d-print-none">
@@ -125,13 +125,13 @@
         </div>
     </div>
     <div id="intro-carousel" class="owl-carousel">
-        <div class="item" style="background-image: url(/static/layouts/reveal/img/pages/inicio/intro-carousel/1.jpg);">
+        <div class="item" style="background-image: url(/static/img/pages/inicio/intro-carousel/1.jpg);">
         </div>
-        <div class="item" style="background-image: url(/static/layouts/reveal/img/pages/inicio/intro-carousel/2.jpg);">
+        <div class="item" style="background-image: url(/static/img/pages/inicio/intro-carousel/2.jpg);">
         </div>
-        <div class="item" style="background-image: url(/static/layouts/reveal/img/pages/inicio/intro-carousel/3.jpg);">
+        <div class="item" style="background-image: url(/static/img/pages/inicio/intro-carousel/3.jpg);">
         </div>
-        <div class="item" style="background-image: url(/static/layouts/reveal/img/pages/inicio/intro-carousel/3.jpg);">
+        <div class="item" style="background-image: url(/static/img/pages/inicio/intro-carousel/3.jpg);">
         </div>
     </div>
 </section>
@@ -140,7 +140,7 @@
     <div class="container">
         <div class="row">
             <div class="col-lg-6 about-img">
-                <img src="/static/layouts/reveal/img/pages/inicio/about-img.jpg" alt="About US" class="img-thumbnail" />
+                <img src="/static/img/pages/inicio/about-img.jpg" alt="About US" class="img-thumbnail" />
             </div>
             <div class="col-lg-6 content">
                 <h2>¿Por qué nosotros?</h2>
@@ -202,27 +202,27 @@
                 <div class="row">
                     <div class="col-md-3 mb-2 text-center">
                         <a href="https://libredte.cl" target="_blank">
-                            <img src="/static/layouts/reveal/img/footer/libredte.png" alt="LibreDTE" class="img-thumbnail img-fluid" />
+                            <img src="/static/img/footer/libredte.png" alt="LibreDTE" class="img-thumbnail img-fluid" />
                         </a>
                     </div>
                     <div class="col-md-3 mb-2 text-center">
                         <a href="https://bhexpress.cl" target="_blank">
-                            <img src="/static/layouts/reveal/img/footer/bhexpress.png" alt="BHExpress" class="img-thumbnail img-fluid" />
+                            <img src="/static/img/footer/bhexpress.png" alt="BHExpress" class="img-thumbnail img-fluid" />
                         </a>
                     </div>
                     <div class="col-md-3 mb-2 text-center">
                         <a href="https://billmysales.com" target="_blank">
-                            <img src="/static/layouts/reveal/img/footer/billmysales.png" alt="BillMySales" class="img-thumbnail img-fluid" />
+                            <img src="/static/img/footer/billmysales.png" alt="BillMySales" class="img-thumbnail img-fluid" />
                         </a>
                     </div>
                     <!--<div class="col-md-3 mb-2 text-center">
                         <a href="https://criptopagos.cl" target="_blank">
-                            <img src="<?=$_base?>/layouts/reveal/img/footer/criptopagos.png" alt="CriptoPagos" class="img-thumbnail img-fluid" />
+                            <img src="<?=$_base?>/img/footer/criptopagos.png" alt="CriptoPagos" class="img-thumbnail img-fluid" />
                         </a>
                     </div>-->
                     <div class="col-md-3 mb-2 text-center">
                         <a href="https://contafi.cl" target="_blank">
-                            <img src="/static/layouts/reveal/img/footer/contafi.png" alt="ContaFi" class="img-thumbnail img-fluid" />
+                            <img src="/static/img/footer/contafi.png" alt="ContaFi" class="img-thumbnail img-fluid" />
                         </a>
                     </div>
                 </div>
@@ -248,19 +248,19 @@
         </footer><!-- #footer -->
         <!--/ End Footer Area -->
         <!-- JavaScript Libraries -->
-        <script src="/static/layouts/reveal/js/lib/jquery/jquery-migrate.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/easing/easing.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/superfish/hoverIntent.js"></script>
-        <script src="/static/layouts/reveal/js/lib/superfish/superfish.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/wow/wow.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/owlcarousel/owl.carousel.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/magnific-popup/magnific-popup.min.js"></script>
-        <script src="/static/layouts/reveal/js/lib/sticky/sticky.js"></script>
+        <script src="/static/layouts/reveal/lib/jquery/jquery-migrate.min.js"></script>
+        <script src="/static/layouts/reveal/lib/bootstrap/js/bootstrap.bundle.min.js"></script>
+        <script src="/static/layouts/reveal/lib/easing/easing.min.js"></script>
+        <script src="/static/layouts/reveal/lib/superfish/hoverIntent.js"></script>
+        <script src="/static/layouts/reveal/lib/superfish/superfish.min.js"></script>
+        <script src="/static/layouts/reveal/lib/wow/wow.min.js"></script>
+        <script src="/static/layouts/reveal/lib/owlcarousel/owl.carousel.min.js"></script>
+        <script src="/static/layouts/reveal/lib/magnific-popup/magnific-popup.min.js"></script>
+        <script src="/static/layouts/reveal/lib/sticky/sticky.js"></script>
         <!-- Template Main Javascript File -->
         <script type="text/javascript" src="https://cdn.sasco.cl/js/__.js"></script>
         <script type="text/javascript" src="https://cdn.sasco.cl/js/form.js"></script>
-        <script src="/static/layouts/reveal/js/main.js"></script>
+        <script src="/static/layouts/reveal/lib/main.js"></script>
         <!--Start of Tawk.to Script-->
         
         <script type="text/javascript">
