Generación automática de la web del

--- a/trabaja-con-nosotros.html
+++ b/trabaja-con-nosotros.html
@@ -126,10 +126,11 @@
                 <div class="lead mb-4 text-uppercase font-weight-bold">¡Se parte de nuestro equipo!</div>
                 <p>¿Tienes interés en integrar el equipo de SASCO? Elige el área de tu interés:</p>
                 <ul class="list">
-                    <li><i class="ion-android-checkmark-circle"></i> Ventas y Marketing</li>
-                    <li><i class="ion-android-checkmark-circle"></i> Gestión y Operaciones</li>
-                    <li><i class="ion-android-checkmark-circle"></i> Soporte Contable y Técnico</li>
-                    <li><i class="ion-android-checkmark-circle"></i> Tecnología y Desarrollo</li>
+                    <li><i class="ion-android-checkmark-circle"></i> Atención al cliente</li>
+                    <li><i class="ion-android-checkmark-circle"></i> Contabilidad</li>
+                    <li><i class="ion-android-checkmark-circle"></i> Marketing</li>
+                    <li><i class="ion-android-checkmark-circle"></i> Ventas</li>
+                    <li><i class="ion-android-checkmark-circle"></i> Tecnología</li>
                 </ul>
                 <hr/>
                 <p>¿Buscas práctica? ¡conversemos! Aceptamos desde estudiantes de liceos a universitarios.</p>
@@ -150,7 +151,7 @@
                     <h4 class="title"><a href="">Programación Web</a></h4>
                     <p class="description">
                         <p>Python, Django, Bootstrap y Javascript</p>
-                        <p class="text-success"><small>Práctica disponible</small></p>
+                        <p class="text-success"><small>Tiempo completo o práctica disponible</small></p>
                     </p>
                 </div>
             </div>
@@ -234,6 +235,7 @@
                     <li><i class="ion-android-checkmark-circle"></i> Trabajo presencial, debes ser de Santa Cruz o alrededores <small>(excepto trabajos que específicamente indiquen remoto)</small></li>
                     <li><i class="ion-android-checkmark-circle"></i> Trabajamos 40 horas a la semana <small>(de 8:30 a 17:30 con una hora de almuerzo)</small></li>
                     <li><i class="ion-android-checkmark-circle"></i> Damos aguinaldo en septiembre y en diciembre. Además pagamos el 25% de gratificación mensualmente.</li>
+                    <li><i class="ion-android-checkmark-circle"></i> Afiliados a caja de compensación y seguro complementario de salud.</li>
                 </ul>
             </div>
         </div>
