Generación automática de la web

--- a/nosotros.html
+++ b/nosotros.html
@@ -133,7 +133,7 @@
             <h3>Nuestro equipo</h3>
         </div>
         <div class="row">
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/bender.jpg" alt="Bender" /></div>
                     <div class="details">
@@ -145,7 +145,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/consuelo-antonia.png" alt="Consuelo Antonia" /></div>
                     <div class="details">
@@ -157,7 +157,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/esteban.png" alt="Esteban Eduardo" /></div>
                     <div class="details">
@@ -170,7 +170,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/felipe.png" alt="Felipe Ignacio" /></div>
                     <div class="details">
@@ -183,7 +183,19 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
+                <div class="member">
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/francisca.png" alt="Francisca María" /></div>
+                    <div class="details">
+                        <h4>Francisca María</h4>
+                        <span>Diseñadora</span>
+                        <div class="social">
+                            <a href="https://www.linkedin.com/in/franciscagallegos/" title="Perfil en Linkedin" class="btn"><i class="fab fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/catalina.jpg" alt="Isabel Catalina" /></div>
                     <div class="details">
@@ -195,7 +207,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/jose.png" alt="José Miguel" /></div>
                     <div class="details">
@@ -207,7 +219,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/macarena.png" alt="Macarena Paz" /></div>
                     <div class="details">
@@ -219,7 +231,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/marcela.jpg" alt="Marcela Francisca" /></div>
                     <div class="details">
@@ -231,7 +243,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/consuelo.png" alt="Margarita Consuelo" /></div>
                     <div class="details">
@@ -243,7 +255,7 @@
                     </div>
                 </div>
             </div>
-            <!--<div class="col-lg-3 col-md-6">
+            <!--<div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="<?=$_base?>img/pages/nosotros/team/maria-luisa.jpg" alt="María Luisa" /></div>
                     <div class="details">
@@ -255,7 +267,7 @@
                     </div>
                 </div>
             </div>-->
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/nicolas.jpg" alt="Nicolás Benjamín" /></div>
                     <div class="details">
@@ -268,7 +280,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/sergio.png" alt="Sergio Andrés" /></div>
                     <div class="details">
@@ -280,7 +292,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/viviana.jpg" alt="Viviana Andrea" /></div>
                     <div class="details">
@@ -292,7 +304,7 @@
                     </div>
                 </div>
             </div>
-            <div class="col-lg-3 col-md-6">
+            <div class="col-md-6 col-lg-3">
                 <div class="member">
                     <div class="pic"><img src="/static/img/pages/nosotros/team/viviana-magdalena.jpg" alt="Viviana Magdalena" /></div>
                     <div class="details">
@@ -304,9 +316,21 @@
                     </div>
                 </div>
             </div>
+            <div class="col-md-6 col-lg-3">
+                <div class="member">
+                    <div class="pic"><img src="/static/img/pages/nosotros/team/yanareth.png" alt="Yanareth Alexandra" /></div>
+                    <div class="details">
+                        <h4>Yanareth Alexandra</h4>
+                        <span>Atención al Cliente</span>
+                        <div class="social">
+                            <a href="https://www.linkedin.com/in/yanareth-a-m%C3%A9ndez-poblete-34a745164/" title="Perfil en Linkedin" class="btn"><i class="fab fa-linkedin"></i></a>
+                        </div>
+                    </div>
+                </div>
+            </div>
         </div>
         <a class="btn btn-primary btn-lg btn-block margen-bottom" href="/trabaja-con-nosotros" role="button">
-            ¿Quieres ser parte de nuestro equipo?
+            ¿Quieres ser parte de SASCO?
         </a>
     </div>
 </section>
